manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-default-backend
spec:
  selector:
    app: nginx-default-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
